--- a/Get2KnowMe/client/index.html
+++ b/Get2KnowMe/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/get2knowme_logo_svg.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get2KnowMe</title>
     <!-- Font Awesome for icons -->
