--- a/Get2KnowMe/client/index.html
+++ b/Get2KnowMe/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/get2knowme_logo_svg.svg" />
+    <link rel="icon" type="image/png" href="/get2knowme_logo_png.png" />
+    <link rel="apple-touch-icon" href="/get2knowme_logo_png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get2KnowMe</title>
     <!-- Font Awesome for icons -->
