--- a/Get2KnowMe/client/index.html
+++ b/Get2KnowMe/client/index.html
@@ -10,6 +10,15 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preload" as="image" href="/get2knowme_logo_svg.svg" type="image/svg+xml" />
+    <!-- Early theme setter: ensures color scheme is set before CSS loads -->
+    <script>
+      try {
+        const scheme = localStorage.getItem('color-scheme');
+        if (scheme) {
+          document.documentElement.setAttribute('data-bs-theme', scheme);
+        }
+      } catch (e) {}
+    </script>
   </head>
   <body>
     <div id="root"></div>
