--- a/Get2KnowMe/client/index.html
+++ b/Get2KnowMe/client/index.html
@@ -9,7 +9,7 @@
     <title>Get2KnowMe</title>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preload" as="image" href="/get2knowme_logo_svg.svg" type="image/svg+xml" />
+    <link rel="preload" as="image" href="/get2knowme_logo_png.png" type="image/png" />
     <!-- Early theme setter: ensures color scheme is set before CSS loads -->
     <script>
       try {
